--- a/src/components/Cell.css
+++ b/src/components/Cell.css
@@ -13,7 +13,7 @@
 }
 
 .square.unrevealed {
-    background-color: #ccc;
+    background-color: orange;
 }
 
 .square.unrevealed:hover {
@@ -32,7 +32,6 @@
     background-color: #ffeb3b;
 }
 
-/* Different colors for numbers */
 .square.number-1 {
     color: blue;
 }
