--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,10 +1,10 @@
 .main-nav {
     display: flex;
     justify-content: space-between;
-    /* Space between title and nav links */
     align-items: center;
     padding: 10px 20px;
     background-color: #333;
+    border-bottom: orange 8px solid;
 }
 
 .title {
@@ -26,7 +26,14 @@
     padding: 5px 10px;
 }
 
-.main-nav a:hover {
+/* Style for active nav link */
+.nav a.active {
+    color: orange;
+    font-weight: bold;
+}
+
+/* Hover style for non-active links */
+.main-nav a:hover:not(.active) {
     color: orange;
     font-weight: bold;
 }
