--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -21,3 +21,14 @@ body {
     margin: 0;
     background-color: #333;
 }
+
+@media screen and (max-width: 600px) {
+    .home-page h1 {
+        font-size: 30px;
+    }
+
+    .home-page p {
+        font-size: 18px;
+    }
+
+}
