--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 10px 20px;
     background-color: #333;
-    border-bottom: orange 8px solid;
+    border-bottom: orange 5px solid;
 }
 
 .title {
@@ -36,4 +36,17 @@
 .main-nav a:hover:not(.active) {
     color: orange;
     font-weight: bold;
+}
+
+
+@media screen and (max-width: 600px) {
+    .main-nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav {
+        margin-top: 20px;
+    }
+
 }
